Update UI and JS logic: progress bar, delete button, and styling

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                 </div>
             </div>
             <div class="stats-numbers">
-                <p id="numbers">2 / 3</p>
+                <p id="numbers">2/3</p>
             </div>
         </div>
         <form action="">
-            <input type="text" placeholder="Write your task">
-            <button type="submit">+</button>
+            <input type="text" placeholder="Write your task" id="taskInput">
+            <button type="submit" id="newTask">+</button>
         </form>
         <ul class="task-list"></ul>
     </div>
