fic progress message bug and improve todo app

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Todo app</title>
     <link rel="stylesheet" href="style.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
+
+
 </head>
 <body>
     <div class="container">
@@ -16,6 +19,7 @@
                 <div id="progressBar">
                     <div id="progress"></div>
                 </div>
+                <p id="progress-message"></p>
             </div>
             <div class="stats-numbers">
                 <p id="numbers">2/3</p>
